# zserio-protobuf-shootout

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  apollo.cpp  apollo.proto  apollo.zs  apollozs.zs  convert.py  convert_vector.py  gtfsrealtime.zs  main.cpp  map.proto  vectortile.proto  vectortile.zs  vtile.cpp
.github/workflows/: msvc.yml
apollo_hdmap/: geometry.proto
cmake/: fetch_deps_with_conan.cmake
data/: apollo.zsbin  gtfs_align.zsbin  gtfs_align_no_opt_str.zsbin  input.json  output.json  rome_rtgtfs_trip_updates_feed.pb  rome_rtgtfs_vehicle_positions_feed.pb  rome_rtgtfs_vehicle_positions_feed.zsbin  vectortile.pbf  vectortile.zsbin
data/apollo/: output.json
reports-pb/: database_integrity_report.md  guideline_compliance_summary.md  guideline_recategorizations_report.md
reports-zs/: database_integrity_report.md  deviations_report.md  guideline_compliance_summary.md
zserio_cpp/gtfsrealtime/: Alert.h  Cause.h  CongestionLevel.h  Effect.h  EntitySelector.h  FeedEntity.h  FeedHeader.h  FeedMessage.h  Gtfsrealtime.cpp  Incrementality.h  OccupancyStatus.h  Position.h  ScheduleRelationship.h  StopTimeEvent.h  StopTimeScheduleRelationship.h  StopTimeUpdate.h  TimeRange.h  TranslatedString.h  Translation.h  TripDescriptor.h  TripUpdate.h  VehicleDescriptor.h  VehiclePosition.h  VehicleStopStatus.h
